# codex-subagent-kit

./: .gitignore  README.ko.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug-report-template.md
.github/workflows/: backfill-release.yml  ci.yml  create-labels.yml  publish-npm.yml  release-semver.yml
.specify/memory/: constitution.md
docs/: EXPERIMENTAL.ko.md  EXPERIMENTAL.md  HANDOFF.ko.md  HANDOFF.md  LEGACY_PYTHON_APP.ko.md  LEGACY_PYTHON_APP.md  MIGRATION_FROM__CODEX_AGENTS.ko.md  MIGRATION_FROM__CODEX_AGENTS.md  PRD.ko.md  PRD.md  RELEASING.ko.md  RELEASING.md  TESTING.ko.md  TESTING.md  TYPESCRIPT_PORT.ko.md  TYPESCRIPT_PORT.md  UNDERSTANDING_AND_WORKFLOW.ko.md  UNDERSTANDING_AND_WORKFLOW.md
reference/legacy_shell_control_plane/: README.ko.md  README.md
scripts/: install.sh  smoke_ts_consumer.sh  test.sh  uninstall.sh
specs/001-orchestrator-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dispatch-lifecycle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-launcher-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-launch-cli/: data-model.md  plan.md  quickstart.md  (+3 more)
tests/: test_catalog.py  test_catalog_import.py  test_catalog_sync.py  test_cli.py  test_control_plane.py  test_dashboard.py  test_doctor.py  test_generator.py  test_golden.py  test_launch_runtime.py  test_panel.py  test_release_versioning.py  test_templates.py  test_tui.py  test_usage.py
(+138 files in other folders)
