[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-orchestrator"
version = "0.1.0"
description = "Local-first toolkit for installing and managing Codex subagent definitions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-orchestrator = "codex_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_orchestrator = [
  "builtin_catalog/categories/*/*.md",
  "builtin_catalog/categories/*/*.toml",
]
